Fix display on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,6 @@
 body {
   color: black;
   margin: 0;
+  white-space: nowrap;
 }
 
